[workspace]


members = [
    "craft-bots/ompas-binding",
    "scheme/core",
    "scheme/macros",
    "utils",
    "middleware",
    "scheme/utils",
    "scheme/structs",
    "scheme/repl",
    "scheme/apps",
    "scheme/modules",
    "scheme/language",
    "resources/playground",
    "acting/apps",
    "acting/core",
    "acting/language",
    "acting/interface",
    "gobotsim",
    "benchmark",

]

exclude = ["aries"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



