[package]
name = "ompas_acting"
version = "0.1.0"
authors = ["Yirmandias <turi@insa-toulouse.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ompas_lisp = {path = "../lisp"}
ompas_utils = {path= "../utils"}
tokio = { version = "1.5.0", features = ["full", "time"] }
tokio-stream = "0.1.6"
async-recursion = "0.3.2"
im = "15.0.0"
lazy_static = "1.4.0"
chrono = "0.4.19"
log =  { version = "0.4", features = ["std"] }



