[package]
name = "ompas_apps"
version = "0.1.0"
authors = ["Yirmandias <turi@insa-toulouse.fr>"]
edition = "2018"
default-run = "ompas"

[features]
lisp_test = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ompas_lisp = {path = "../lisp"}
ompas_godot_simulation_client = {path = "../godot-simulation-client"}
ompas_acting = {path = "../acting"}
ompas_utils = {path = "../utils"}
ompas_planning = {path = "../planning"}

aries_model = {git = "https://github.com/Yirmandias/aries/", branch = "parse_string"}
aries_planning = {git = "https://github.com/Yirmandias/aries/", branch = "parse_string"}
aries_utils = {git = "https://github.com/Yirmandias/aries/", branch = "parse_string"}
aries_collections = {git = "https://github.com/Yirmandias/aries/", branch = "parse_string"}
anyhow = "1.0.40"
rustyline = "7.1.0"
im = "15.0.0"
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.5.0", features = ["full", "time"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.64"
chrono = "0.4.19"

[[bin]]
name = "ompas"
path = "src/bin/ompas.rs"

[[bin]]
name = "ompas-simu"
path = "src/bin/ompas-simu.rs"


[[bin]]
name = "scheme"
path = "src/bin/scheme.rs"

[[bin]]
name = "root_scheme"
path = "src/bin/root_scheme.rs"

[[bin]]
name = "translate"
path = "src/bin/translate.rs"

[[example]]
name = "virtual_robot"
path = "examples/robot_sim.rs"

[[example]]
name = "supervisor"
path = "examples/unnamed_supervisor.rs"

[[example]]
name = "godot_test"
path = "examples/godot.rs"

[[example]]
name = "serde_test"
path = "examples/serde.rs"

[[example]]
name = "command_line_godot"
path = "examples/command_line_godot.rs"

[[example]]
name = "test_end_tasks"
path = "examples/end_tasks.rs"

[[example]]
name = "test_spawn_terminal"
path = "examples/spawn_terminal.rs"

[[example]]
name = "test_enumerate"
path = "examples/enumerate.rs"

[[example]]
name = "test_logger"
path = "examples/logger.rs"

[[example]]
name = "test_lenv"
path = "examples/recursive_search_of_symbol.rs"

[[example]]
name = "test_chronicle_conversion"
path = "examples/convert_to_chronicle.rs"
