[package]
name = "ompas-benchmark"
version = "0.1.0"
authors = ["Yirmandias <turi@insa-toulouse.fr>"]
edition = "2018"
default-run = "bench"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sompas-modules = {path = "../scheme/modules"}
sompas-repl = {path = "../scheme/repl"}
ompas-core = {path = "../acting/core"}
ompas-gobotsim = {path = "../ompas-gobot-sim"}
ompas-language = {path = "../acting/language"}
ompas-middleware = {path = "../middleware"}
ompas-interface = {path = "../acting/interface"}

chrono = {workspace = true}
tokio = {workspace = true}
structopt = { workspace = true }
yaml-rust = {workspace = true}

lettre = "0.10"
indicatif = "0.17.0"
colored = "2.0.0"

[[bin]]
name = "bench-sim"
path = "src/bin/bench_sim.rs"

[[bin]]
name = "bench-gobot-sim"
path = "src/bin/bench_gobot.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"





