[package]
name = "ompas-benchmark"
version = "0.1.0"
authors = ["Yirmandias <turi@insa-toulouse.fr>"]
edition = "2018"
default-run = "bench"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ompas-middleware = {path = "../middleware"}
ompas-core= {path = "../acting/core"}

structopt = { workspace = true}
serde_yaml = {workspace = true}
serde = { workspace = true }
tokio = {workspace = true }

lettre = "0.11.1"
indicatif = "0.17.7"
colored = "2.0.4"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"





