[package]
name = "ompas-benchmark"
version = "0.1.0"
authors = ["Yirmandias <turi@insa-toulouse.fr>"]
edition = "2018"
default-run = "bench"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ompas-middleware = {path = "../middleware"}
ompas-core= {path = "../acting/core"}
ompas-language= {path = "../acting/language"}

structopt = { workspace = true}
serde_yaml = {workspace = true}
serde = { workspace = true }
tokio = {workspace = true }
chrono = {workspace = true}

lettre = "0.11.1"
lettre_email = "0.9.4"
mime = "0.3.17"
indicatif = "0.17.7"
colored = "2.0.4"
zip_archive = "1.2.2"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"





