[package]
name = "ompas-gobotsim"
version = "0.1.0"
authors = ["Yirmandias <turi@insa-toulouse.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sompas-modules = {path = "../scheme/modules"}
sompas-structs = {path = "../scheme/structs"}
sompas-core= {path = "../scheme/core"}
sompas-repl = {path = "../scheme/repl"}
ompas-utils = {path = "../utils"}
ompas-middleware = {path = "../middleware"}
sompas-language= {path = "../scheme/language"}
sompas-macros = {path = "../scheme/macros"}
ompas-rae-core = {path = "../rae/core"}
ompas-rae-structs = {path = "../rae/structs"}
ompas-rae-interface = {path = "../rae/interface"}
ompas-rae-language = {path = "../rae/language"}
aries_planning = {path = "../aries/planning"}
im = "15.0.0"
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.64"
tokio = { version = "1.17.0", features = ["full", "time"] }
byteorder = "1.4.3"
async-trait = "0.1.51"
macro_rules_attribute = "0.0.2"
tonic = "0.8"
tokio-stream = { default-features = false, version = "0.1" }
map-macro = "0.2.4"


[[bin]]
name = "gobot-ompas"
path = "src/bin/main.rs"

