[package]
name = "ompas-gobotsim"
version = "0.1.0"
authors = ["Yirmandias <turi@insa-toulouse.fr>"]
edition = "2018"
default-run= "gobot-ompas"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sompas-modules = {path = "../scheme/modules"}
sompas-structs = {path = "../scheme/structs"}
sompas-core= {path = "../scheme/core"}
sompas-repl = {path = "../scheme/repl"}
sompas-language= {path = "../scheme/language"}
sompas-macros = {path = "../scheme/macros"}

ompas-middleware = {path = "../middleware"}
ompas-utils = {path = "../utils"}
ompas-core = {path = "../acting/core"}
ompas-interface = {path = "../acting/interface"}
ompas-language = {path = "../acting/language"}
aries_planning = {path = "../aries/planning/planning"}

im = "15.0.0"
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.64"
tokio = { version = "1.17.0", features = ["full", "time"] }
byteorder = "1.4.3"
async-trait = "0.1.51"
macro_rules_attribute = "0.0.2"
tonic = "0.8"
tokio-stream = { default-features = false, version = "0.1" }
map-macro = "0.2.4"


[[bin]]
name = "gobot-ompas"
path = "src/bin/main.rs"

[[bin]]
name = "gobot-plan"
path = "src/bin/plan.rs"

[[bin]]
name = "gobot-plan-exec"
path = "src/bin/plan_exec.rs"

