[package]
name = "ompas_godot_simulation_client"
version = "0.1.0"
authors = ["Yirmandias <turi@insa-toulouse.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ompas_lisp = {path = "../lisp"}
ompas_acting = {path = "../acting"}
ompas_utils = {path = "../utils"}
aries_model = {git = "https://github.com/Yirmandias/aries/", branch = "parse_string"}
aries_planning = {git = "https://github.com/Yirmandias/aries/", branch = "parse_string"}
aries_utils = {git = "https://github.com/Yirmandias/aries/", branch = "parse_string"}
aries_collections = {git = "https://github.com/Yirmandias/aries/", branch = "parse_string"}
anyhow = "1.0.40"
rustyline = "7.1.0"
im = "15.0.0"
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.64"
tokio = { version = "1.5.0", features = ["full", "time"] }
byteorder = "1.4.3"
async-trait = "0.1.51"
macro_rules_attribute = "0.0.2"
