[package]
name = "ompas_lisp"
version = "0.1.0"
authors = ["Yirmandias <turi@etud.insa-toulouse.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aries_model = {git = "https://github.com/arbimo/aries/", rev = "e220567"}
aries_planning = {git = "https://github.com/arbimo/aries/", rev = "e220567"}
aries_utils = {git = "https://github.com/arbimo/aries/", rev = "e220567"}
aries_collections = {git = "https://github.com/arbimo/aries/", rev = "e220567"}
anyhow = "1.0.40"
rustyline = "7.1.0"
im = "15.0.0"
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1.5.0", features = ["full", "time"] }
tokio-stream = "0.1.6"
lazy_static = "0.1.*"
