[package]
name = "ompas_lisp"
version = "0.1.0"
authors = ["Yirmandias <turi@etud.insa-toulouse.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ompas_utils = {path = "../utils"}
async-recursion = "0.3.2"
aries_model = {path = "../../aries/model"}
aries_planning = {path = "../../aries/planning"}
aries_utils = {path = "../../aries/utils"}
aries_collections = {path = "../../aries/collections"}
anyhow = "1.0.40"
rustyline = "7.1.0"
im = "15.0.0"
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1.5.0", features = ["full", "time"] }
tokio-stream = "0.1.6"
lazy_static = "1.4.0"
rand = "0.8.4"
chrono = "0.4.19"
macro_rules_attribute = "0.0.2"
futures = "0.3.17"
num-traits = "*"

[[example]]
name = "pretty-print"
path = "examples/pretty_print.rs"
