[package]
name = "ompas-middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ompas-utils = {path = "../utils"}
lazy_static = "1.4.0"
chrono = "0.4.19"
tokio = { version = "1.17.0", features = ["full", "time"] }
log =  { version = "0.4.16", features = ["std"] }
map-macro = "0.2.4"