[package]
name = "ompas-middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ompas-utils = {path = "../utils"}

env_param = {path = "../aries/env_param"}

chrono = {workspace = true}
tokio = { workspace = true }
map-macro = {workspace = true}
serde = {workspace = true}


log =  { version = "0.4.16", features = ["std"] }
lazy_static = "1.4.0"
