[package]
name = "ompas_modules"
version = "0.1.0"
authors = ["Yirmandias <turi@insa-toulouse.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ompas_lisp = {path = "../lisp"}
ompas_utils = {path= "../utils"}
aries_model = {git = "https://github.com/arbimo/aries/", rev = "e220567"}
aries_planning = {git = "https://github.com/arbimo/aries/", rev = "e220567"}
aries_utils = {git = "https://github.com/arbimo/aries/", rev = "e220567"}
aries_collections = {git = "https://github.com/arbimo/aries/", rev = "e220567"}
anyhow = "1.0.40"
rustyline = "7.1.0"
im = "15.0.0"
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.5.0", features = ["full", "time"] }
chrono = "0.4.19"
rand = "0.8.3"