[package]
name = "ompas-gobotsim"
version = "0.1.0"
authors = ["Yirmandias <turi@insa-toulouse.fr>"]
edition = "2018"
default-run= "ompas-gobot-sim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# SOMPAS dependencies
sompas-modules = {path = "../scheme/modules"}
sompas-structs = {path = "../scheme/structs"}
sompas-core= {path = "../scheme/core"}
sompas-repl = {path = "../scheme/repl"}
sompas-language= {path = "../scheme/language"}
sompas-macros = {path = "../scheme/macros"}

# OMPAS dependencies
ompas-middleware = {path = "../middleware"}
ompas-utils = {path = "../utils"}
ompas-core = {path = "../acting/core"}
ompas-interface = {path = "../acting/interface"}
ompas-language = {path = "../acting/language"}

# Aries dependencies
aries_planning = {path = "../aries/planning/planning"}
env_param = {path = "../aries/env_param"}

im = "15.0.0"
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.64"
tokio = { version = "1.17.0", features = ["full", "time"] }
byteorder = "1.4.3"
async-trait = "0.1.51"
macro_rules_attribute = "0.0.2"
tonic = "0.8"
tokio-stream = { default-features = false, version = "0.1" }
map-macro = "0.2.4"


[[bin]]
name = "ompas-gobot-sim"
path = "src/bin/main.rs"

[[bin]]
name = "ompas-gobot-sim-plan"
path = "src/bin/plan.rs"

[[bin]]
name = "ompas-gobot-sim-plan-exec"
path = "src/bin/plan_exec.rs"

