[package]
name = "ompas_planning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ompas_lisp = {path = "../lisp"}
ompas_utils = {path= "../utils"}
ompas_acting = {path = "../acting"}
macro_rules_attribute = "0.0.2"
async-trait = "0.1.51"
im = "15.0.0"
tokio = { version = "1.5.0", features = ["full", "time"] }
