[package]
name = "ompas_rae"
version = "0.1.0"
authors = ["Yirmandias <turi@insa-toulouse.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ompas_lisp = {path = "../lisp"}
ompas_utils = {path= "../utils"}
tokio = { version = "1.5.0", features = ["full", "time"] }
tokio-stream = "0.1.6"
async-recursion = "0.3.2"
im = "15.0.0"
lazy_static = "1.4.0"
chrono = "0.4.19"
log =  { version = "0.4", features = ["std"] }
macro_rules_attribute = "0.0.2"
async-trait = "0.1.51"
cli-table = "0.4.6"
aries_core = {path = "../../aries/core"}
aries_model = {path = "../../aries/model"}
aries_planning = {path = "../../aries/planning"}
aries_utils = {path = "../../aries/utils"}
aries_collections = {path = "../../aries/collections"}
anyhow = "1.0.40"




