[package]
name = "ompas_utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full", "time"] }
tokio-stream = "0.1.6"
lazy_static = "0.1.*"
chrono = "0.4.19"
