[package]
name = "ompas-utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-stream = "0.1.6"
lazy_static = "1.4.0"
im = "15.0.0"
tokio = { version = "1.17.0", features = ["full", "time"] }
log =  { version = "0.4.16", features = ["std"] }
async-recursion = "1.0.0"

