[package]
name = "ompas-apps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ompas-core = {path = "../core"}
sompas-language= {path = "../../scheme/language"}
sompas-core = {path = "../../scheme/core", features = ["opt"]}
sompas-structs = {path = "../../scheme/structs"}
sompas-repl = {path = "../../scheme/repl"}
sompas-modules = {path = "../../scheme/modules"}
ompas-language = {path = "../language"}
ompas-middleware = {path = "../../middleware"}

structopt = { workspace = true}
tokio = { workspace = true }
yaml-rust = {workspace = true}
chrono = {workspace = true}

tracing = "0.1.37"
tracing-subscriber = "0.3.17"