[package]
name = "ompas-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sompas-structs = {path = "../../scheme/structs"}
sompas-modules = {path = "../../scheme/modules"}
sompas-core = {path = "../../scheme/core"}
sompas-language = {path = "../../scheme/language"}
sompas-macros = {path = "../../scheme/macros"}

ompas-utils = {path= "../../utils" }
ompas-interface = {path = "../interface"}
ompas-language = {path = "../language"}
ompas-middleware = {path = "../../middleware"}

aries_planning = {path = "../../aries/planning/planning"}
aries_planners = {path = "../../aries/planning/planners"}
aries = {path = "../../aries/solver"}
env_param = {path = "../../aries/env_param"}

tokio = { workspace = true }
im = {workspace = true}
chrono = {workspace = true}
anyhow = {workspace = true}
rand = {workspace = true}
itertools = { workspace = true }

macro_rules_attribute = {workspace = true}
async-trait = {workspace = true}

tonic = {workspace = true}
async-stream = {workspace = true}
map-macro =  {workspace = true}
tokio-stream = { workspace = true }
async-recursion = {workspace = true}
serde_json = {workspace = true}
serde_yaml = {workspace = true}


futures = "0.3.28"
function_name = "0.3.0"
debug_print = "1.0.0"
cli-table = "0.4.7"
num-integer = "0.1.45"
csv = { version = "1.3.0", features = [] }
serde = { version = "1.0.188", features = ["derive"] }
new_type = "0.4.1"
atomic_float = "0.1.0"

