[package]
name = "ompas-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sompas-core = {path = "../../scheme/core"}
sompas-structs = {path = "../../scheme/structs"}

ompas-utils = {path= "../../utils" }
ompas-middleware=  {path = "../../middleware"}
ompas-language = {path = "../language"}

async-trait = "0.1.51"
tokio = { version = "1.17.0", features = ["full", "time"] }

prost = { default-features = false, version = "0.11" }
tonic = "0.8"
async-stream = "0.3.3"

tokio-stream = { default-features = false, version = "0.1" }
map-macro = "0.2.4"


[build-dependencies]
tonic-build = "0.8"
