[package]
name = "ompas-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sompas-core = {path = "../../scheme/core"}
sompas-structs = {path = "../../scheme/structs"}

ompas-utils = {path= "../../utils" }
ompas-middleware=  {path = "../../middleware"}
ompas-language = {path = "../language"}

tonic = {workspace = true}
async-stream = {workspace = true}
tokio-stream = { workspace = true }

async-trait = {workspace = true}
tokio = { workspace = true }
prost = { workspace = true }

map-macro = {workspace = true}

yaml-rust = "0.4"

[build-dependencies]
tonic-build = {workspace = true}