[package]
name = "ompas-planning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#Scheme bindings
sompas-structs = {path = "../../scheme/structs"}
sompas-language = {path = "../../scheme/language"}
sompas-core = {path = "../../scheme/core"}
sompas-modules = {path = "../../scheme/modules"}
sompas-macros = {path = "../../scheme/macros"}

#OMPAS bindings
ompas-utils = {path= "../../utils"}
ompas-language = {path = "../language"}
ompas-structs = {path = "../structs"}

# aries bindings
aries_core = {path = "../../aries/core"}
aries_model = {path = "../../aries/model"}
aries_planning = {path = "../../aries/planning"}
aries_utils = {path = "../../aries/utils"}
aries_collections = {path = "../../aries/collections"}
aries_solver = {path = "../../aries/solver"}
aries_planners = {path = "../../aries/planners"}
aries_stn = {path = "../../aries/reasoners/stn"}

anyhow = "1.0.40"
tokio = { version = "1.17.0", features = ["full", "time"] }
log =  { version = "0.4.16", features = ["std"] }
im = "15.0.0"
cli-table = "0.4.6"
structopt = { version = "0.3", default-features = false }
chrono = "0.4.19"
rand = "0.8.5"
yaml-rust = "0.4"
async-recursion = "1.0.0"
itertools = { default-features = false, version = "0.10" }

[[bin]]
name = "flow-graph"
path = "src/bin/main.rs"

[[bin]]
name = "type-network"
path = "src/bin/type_network.rs"

[[bin]]
name = "domain"
path = "src/bin/domain_collection.rs"
