[package]
name = "ompas-rae-apps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ompas-rae-core = {path = "../core"}
sompas-language= {path = "../../scheme/language"}
sompas-core = {path = "../../scheme/core"}
sompas-repl = {path = "../../scheme/repl"}
sompas-modules = {path = "../../scheme/modules"}
structopt = { version = "0.3", default-features = false }
ompas-middleware = {path = "../../middleware"}
tokio = { version = "1.17.0", features = ["full", "time"] }

